--- a/new_argocd_file/new_argocd.yaml
+++ b/new_argocd_file/new_argocd.yaml
@@ -1,15 +1,26 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ''
+  name: new-app-name
+  namespace: argocd
 spec:
   destination:
-    name: ''
-    namespace: ''
-    server: ''
+    namespace: fyp
+    server: https://kubernetes.default.svc
   source:
-    path: ''
-    repoURL: ''
-    targetRevision: HEAD
-  sources: []
-  project: ''
+    chart: "chart/new-app-name"
+    repoURL: local.harbor.io
+    targetRevision: 0.1.0
+    helm:
+      valueFiles:
+        - values.yaml
+  project: "default"
+  syncPolicy:
+    automated:
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+
+
+
+
